--- a/design-patterns/pom.xml
+++ b/design-patterns/pom.xml
@@ -30,6 +30,11 @@
       <version>10.14.2.0</version>
     </dependency>
     <dependency>
+      <groupId>org.twitter4j</groupId>
+      <artifactId>twitter4j-core</artifactId>
+      <version>4.0.6</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
